--- a/Assets/UI Toolkit/MainMenuStyle.uss
+++ b/Assets/UI Toolkit/MainMenuStyle.uss
@@ -44,8 +44,16 @@
     margin-right: 20px;
     margin-bottom: 20px;
     margin-left: 20px;
-    background-color: rgb(255, 174, 0);
+    background-color: rgb(255, 149, 8);
     -unity-background-image-tint-color: rgb(255, 255, 255);
     background-repeat: no-repeat no-repeat;
-    -unity-font-style: normal;
+    -unity-font-style: bold;
+    -unity-text-outline-color: rgba(0, 0, 0, 0);
+    background-image: none;
+    background-size: 100% 100%;
+    background-position-y: center 0;
+    background-position-x: left 0;
+    -unity-slice-left: 0;
+    -unity-slice-right: 0;
+    -unity-font-definition: url("project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&guid=1834b569d06d88748980f310b45fad50&type=3#NotInter-Regular");
 }
