Main Menu font changes

--- a/Assets/UI Toolkit/MainMenuStyle.uss
+++ b/Assets/UI Toolkit/MainMenuStyle.uss
@@ -27,8 +27,9 @@
 }
 
 .header3 {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-size: 70px;
+    -unity-font-style: bold;
 }
 
 .button {
