--- a/Assets/UI Toolkit/MainMenuVisualTree.uxml
+++ b/Assets/UI Toolkit/MainMenuVisualTree.uxml
@@ -1,18 +1,25 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/MainMenuStyle.uss?fileID=7433441132597879392&amp;guid=d1e8ea767ce467149a74af42225b7f57&amp;type=3#MainMenuStyle" />
     <engine:VisualElement name="Container" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/_Game/Sprites/MainMenu/MainMenuBG.png?fileID=2800000&amp;guid=09c048c9da3f80a49b05288952253865&amp;type=3#MainMenuBG&quot;);">
-        <engine:Label text="Urban Eagle" name="Header" class="header" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;);" />
+        <engine:Label text="Urban Eagle" name="Header" class="header" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;); color: rgb(130, 0, 0); font-size: 150px;" />
         <engine:VisualElement name="RootMenu" style="flex-grow: 1; visibility: visible; display: flex; scale: 1.1 1;">
             <engine:Button text="Start" name="StartGameButton" class="button" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;);" />
+            <engine:Button text="High Score" name="HighScoreButton" class="button" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;); font-size: 35px;" />
             <engine:Button text="Credit" name="CreditButton" class="button" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;);" />
             <engine:Button text="Quit&#10;" name="QuitButton" class="button" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;);" />
         </engine:VisualElement>
         <engine:VisualElement name="CreditMenu" style="flex-grow: 1; display: none;">
-            <engine:Label text="Credit" name="CreditHeader" class="header2" />
-            <engine:Label text="Carlos Zambrano" name="Carlos" class="header3" />
-            <engine:Label text="Mercy Perutka" name="Mercy" class="header3" />
-            <engine:Label text="Paul Saetae" name="Paul" class="header3" />
+            <engine:Label text="Credit" name="CreditHeader" class="header2" style="color: rgb(157, 0, 0);" />
+            <engine:Label text="Carlos Zambrano" name="Carlos" class="header3" style="color: rgb(157, 0, 0); background-color: rgba(255, 255, 255, 0);" />
+            <engine:Label text="Mercy Perutka" name="Mercy" class="header3" style="color: rgb(157, 0, 0); background-color: rgba(255, 255, 255, 0);" />
+            <engine:Label text="Paul Saetae" name="Paul" class="header3" style="background-color: rgba(255, 255, 255, 0); color: rgb(157, 0, 0); text-overflow: clip; -unity-font-style: bold;" />
             <engine:Button text="Back" name="CreditBackButton" class="button" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;);" />
+        </engine:VisualElement>
+        <engine:VisualElement name="HighScoreMenu" style="flex-grow: 1; display: none;">
+            <engine:Label text="High Score" name="HighScoreHeader" emoji-fallback-support="false" class="header2" style="color: rgb(157, 0, 0);" />
+            <engine:Label text="High Score" name="HighScoreDisplay" emoji-fallback-support="false" class="header2" style="font-size: 70px; color: rgb(157, 0, 0);" />
+            <engine:Button text="Reset" name="HighScoreResetButton" class="button" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;);" />
+            <engine:Button text="Back" name="HighScoreBackButton" class="button" style="-unity-font-definition: url(&quot;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=1834b569d06d88748980f310b45fad50&amp;type=3#NotInter-Regular&quot;);" />
         </engine:VisualElement>
     </engine:VisualElement>
 </engine:UXML>
